--- a/src/components/LettersCalculator/index.css
+++ b/src/components/LettersCalculator/index.css
@@ -121,8 +121,14 @@
 }
 
 .letters-calculator-image {
-  width: 50vw;
+  width: 100%;
   order: 0;
+}
+
+@media screen and (min-width: 520px){
+    .letters-calculator-image{
+        width: 450px;
+    }
 }
 
 @media screen and (min-width: 992px) {
